package com.deloitte.training.oodesignpatterns.creational.abstractfactory;

public class Blue implements Color {

    @Override
    public void fill() {
        System.out.println("BLUE color");
    }
    
}
