package com.deloitte.training.oodesignpatterns.creational.abstractfactory;

public interface Color {

    void fill();
    
}
