package com.deloitte.training.oodesignpatterns.creational.abstractfactory;

public class Green implements Color {

    @Override
    public void fill() {
        System.out.println("GREEN color");
    }
    
}
