package com.deloitte.training.oodesignpatterns.creational.abstractfactory;

public class Red implements Color {

    @Override
    public void fill() {
        System.out.println("RED color");
    }
    
}
